<resources>
    <string name="app_name">AppWrite_UserAuth</string>
    <string name="app_desc">Mobile Moguls App is an app that was participated in the hackathon</string>
    <string name="logo_app">logo app</string>
    <string name="login">Login</string>
    <string name="placeholder_input_email">Enter your email</string>
    <string name="placeholder_input_password">Enter your password</string>
    <string name="placeholder_input_new_password">Enter new password</string>
    <string name="placeholder_input_old_password">Enter old password</string>
    <string name="ask_have_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="placeholder_input_name">Enter your name</string>
    <string name="create_account">Create Account</string>
    <string name="cancel">Cancel</string>
    <string name="already_account">Already Have an Account?</string>
    <string name="icon_splashscreen">icon splashscreen</string>
    <string name="end_session">Log out</string>
    <string name="device_os_version">Device OS Version:</string>
    <string name="device_os">Device OS:</string>
    <string name="device_brand">Device Brand:</string>
    <string name="device_model">Device Model:</string>
    <string name="ip_address">IP Address:</string>
    <string name="user_id">User ID:</string>
    <string name="username">User Name:</string>
    <string name="usermail">User Email:</string>
    <string name="updatePassword">Update Password</string>
    <string name="welcome_successfully_login">Welcome! \n You have successfully logged into the app!</string>
</resources>
